--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,15 @@
     "require-dev": {
         "phpunit/phpunit": "^4.8"
     },
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Ingram Monk",
             "email": "ingram.monk@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+    },
     "autoload": {
         "psr-4": {
             "IFP\\SaleAdvertSearchClient\\": "src/"
