--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ifp/sale-advert-search-client",
+    "name": "ifp/sale-advert-search",
     "description": "REST client for search.french-property.com",
     "require-dev": {
         "phpunit/phpunit": "^4.8"
