--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,6 @@
     "require-dev": {
         "phpunit/phpunit": "^4.8"
     },
-    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Ingram Monk",
@@ -12,6 +11,7 @@
         }
     ],
     "require": {
+        "guzzlehttp/guzzle": "^6.1"
     },
     "autoload": {
         "psr-4": {
