--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
     "require": {
         "guzzlehttp/guzzle": "^6.1"
     },
+    "require-dev": {
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~4.0"
+    },
     "autoload": {
         "psr-4": {
             "IFP\\Adverts\\": "src/"
