--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,6 @@
 {
     "name": "ifp/adverts",
     "description": "REST client for french-property.com",
-    "require-dev": {
-        "phpunit/phpunit": "^4.8"
-    },
     "authors": [
         {
             "name": "Ingram Monk",
@@ -15,7 +12,7 @@
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "^4.8",
         "mikey179/vfsStream": "~1"
     },
     "autoload": {
