--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "autoload": {
         "psr-4": {
-            "IFP\\Adverts\\": "src/"
+            "IFP\\Adverts\\": "src/",
+            "IFP\\Adverts\\Tests\\": "tests/"
         }
     }
 }
