--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,15 @@
             "email": "ingram.monk@gmail.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/ifp/data"
+        }
+    ],
     "require": {
-        "guzzlehttp/guzzle": "^6.1"
+        "guzzlehttp/guzzle": "^6.1",
+        "ifp/data": "dev-master"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
